# telemulator3

./: .coveragerc  .gitignore  .pylintrc  .pypirc  MANIFEST.in  README.md  history.txt  makefile  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: pep257.yml  py3.yml
telemulator3/: __init__.py  api.py  dictionaryable.py  user.py
telemulator3/chat/: __init__.py  base.py  channel.py  group.py  history.py  keyboard.py  member.py  private.py
telemulator3/method/: __init__.py  answerCallbackQuery.py  deleteMessage.py  editMessageCaption.py  editMessageReplyMarkup.py  editMessageText.py  forwardMessage.py  getChat.py  getChatAdministrators.py  getChatMember.py  getChatMemberCount.py  getChatMembersCount.py  getFile.py  getMe.py  leaveChat.py  sendAudio.py  sendChatAction.py  sendDocument.py  sendMessage.py  sendPhoto.py  setWebhook.py
telemulator3/update/: __init__.py  callback_query.py  markup.py  message.py
tests/: requirements.txt
tests/test/: __init__.py  test_api.py  test_init.py  test_readme.py  test_user.py
tests/test/test_chat/: __init__.py  test_base.py  test_channel.py  test_group.py  test_history.py  test_keyboard.py  test_private.py
tests/test/test_method/: __init__.py  test_answer_callback_query.py  test_delete_message.py  test_edit_message_caption.py  test_edit_message_reply_markup.py  test_edit_message_text.py  test_forward_message.py  test_get_chat.py  test_get_chat_administrators.py  test_get_chat_member.py  test_get_chat_member_count.py  test_get_file.py  test_get_me.py  test_init.py  test_leave_chat.py  test_send_audio.py  (+5 more)
(+4 files in other folders)
