[metadata]
name = telemulator3
version = 1.1
author = Vitaly Bogomolov
author_email = mail@vitaly-bogomolov.ru
description = Mocked Telegram Bot API elements for unit tests of a bot based on the pyTelegramBotAPI library.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vb64/telemulator3
project_urls =
    Bug Tracker = https://github.com/vb64/telemulator3/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = telemulator3
python_requires = >=3.7
include_package_data=True
